add a simple local test for simd